--- a/features.html
+++ b/features.html
@@ -145,8 +145,8 @@
         </div>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="index">Home</a></li>
+                <li><a href="about">About</a></li>
                 <li>Services (You are here)</li>
                 <li><a href="#">Contact</a></li>
             </ul>
