--- a/staff.html
+++ b/staff.html
@@ -154,9 +154,9 @@ footer {
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="about">About</a></li>
+                <li><a href="features">Services</a></li>
+                <li>Contact (You are here)</li>
             </ul>
         </nav>
     </header>
