--- a/features.html
+++ b/features.html
@@ -148,7 +148,7 @@
                 <li><a href="index">Home</a></li>
                 <li><a href="about">About</a></li>
                 <li>Services (You are here)</li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="staff">Contact</a></li>
             </ul>
         </nav>
     </header>
