--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Capital Network</title>
-    <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+        <title>Capital Network</title>
+    <meta name="keywords" content="Capital Network, #1 British Based server" />
+    <meta name="author" content="Capital Network" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta property="og:title" content="Capital Network">
+    <meta property="og:description" content="Capital Network, #1 British Based server">
+    <meta property="og:url" content="https://rileyb.co.uk/capitalnetwork>
+    <meta property="og:type" content="website">
     <style>
         /* Basic Reset */
         * {
