--- a/index.html
+++ b/index.html
@@ -209,11 +209,11 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
+                <li><a href="#home">Home</li>
                 <li><a href="about">About</a></li>
-                <li><a href="#features">Features</a></li>
+                <li><a href="features">Features</a></li>
                 <li><a href="commingsoon">Borders</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="staff">Contact</a></li>
             </ul>
         </nav>
     </header>
