--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@
                 <li><a href="features">Features</a></li>
                 <li><a href="commingsoon">Borders</a></li>
                 <li><a href="staff">Contact</a></li>
+                <li><a href="https://discord.gg/DtRtbZ9n8Z">Our Discord!</a></li>
             </ul>
         </nav>
     </header>
