--- a/staff.html
+++ b/staff.html
@@ -182,6 +182,11 @@ footer {
                     <p>Role: Creator</p>
                     <p>Email: Riley@capitalnetwork.org.uk</p>
                 </div>
+                <div class="card">
+                    <h3>Reece</h3>
+                    <p>Role: Staff Manager</p>
+                    <p>Email: Reece@capitalnetwork.org.uk</p>
+                </div>
             </div>
         </section>
     </div>
