--- a/staff.html
+++ b/staff.html
@@ -183,6 +183,16 @@ footer {
                     <p>Email: Riley@capitalnetwork.org.uk</p>
                 </div>
                 <div class="card">
+                    <h3>Durell</h3>
+                    <p>Role: Founder</p>
+                    <p>Email: Durell@capitalnetwork.org.uk</p>
+                </div>
+                <div class="card">
+                    <h3>Cody</h3>
+                    <p>Role: Founder</p>
+                    <p>Email: Cody@capitalnetwork.org.uk</p>
+                </div>
+                <div class="card">
                     <h3>Reece</h3>
                     <p>Role: Staff Manager</p>
                     <p>Email: Reece@capitalnetwork.org.uk</p>
