--- a/staff.html
+++ b/staff.html
@@ -178,9 +178,9 @@ footer {
                     <p>Email: Logan@capitalnetwork.org.uk</p>
                 </div>
                 <div class="card">
-                    <h3>Riley</h3>
+                    <h3>Mario</h3>
                     <p>Role: Creator</p>
-                    <p>Email: Riley@capitalnetwork.org.uk</p>
+                    <p>Email: Mario@capitalnetwork.org.uk</p>
                 </div>
                 <div class="card">
                     <h3>Durell</h3>
@@ -193,9 +193,9 @@ footer {
                     <p>Email: Cody@capitalnetwork.org.uk</p>
                 </div>
                 <div class="card">
-                    <h3>Reece</h3>
+                    <h3>Luigi</h3>
                     <p>Role: Staff Manager</p>
-                    <p>Email: Reece@capitalnetwork.org.uk</p>
+                    <p>Email: Luigi@capitalnetwork.org.uk</p>
                 </div>
             </div>
         </section>
