--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         <div class="hero-content" data-aos="fade-up">
             <h1>Welcome to <span>Capital Network</span></h1>
             <p>Your Premier UK-Based FiveM Server</p>
-            <a href="commingsoon.html" class="btn">Join Now</a>
+            <a href="https://discord.gg/CapitalNetwork" class="btn">Join Now</a>
             <a href="#about" class="btn">Learn More</a>
         </div>
     </section>
@@ -261,14 +261,14 @@
 
     <!-- Countdown Section -->
     <section id="countdown" class="section countdown" data-aos="zoom-in">
-        <h2>Borders Opening Soon</h2>
-        <p>We plan to open our borders on <strong>28th December 2024</strong>.</p>
+        <h2>Borders are open</h2>
+        <p>We are officially open check us out.</strong>.</p>
         <div id="timer"></div>
     </section>
 
     <!-- Footer -->
     <footer>
-        <p>© 2024 Capital Network | All Rights Reserved</p>
+        <p>© 2025 Capital Network | All Rights Reserved</p>
     </footer>
 
     <!-- AOS Script -->
